cmake_minimum_required(VERSION 3.14)
project(c_programmig C)

set(CMAKE_C_STANDARD 99)

add_executable(block block.c)

add_executable(hello-world hello-world.c)

add_executable(scope scope.c)

add_executable(scope-main scope-main.c)

add_executable(struct struct.c)

add_executable(var var.c)

add_executable(jfile jfile.c)

add_executable(io io.c)

add_executable(operator operator.c)

add_executable(array array.c)

add_executable(arrry_error arrry_error.c)

add_executable(flow flow.c)

add_executable(flow_switch flow_switch.c)

add_executable(while while.c)

add_executable(xy xy.c)

add_executable(average average.c)

add_executable(loops loops.c)

add_executable(structs structs.c)

add_executable(enum enum.c)

add_executable(pointer pointer.c)

add_executable(point_array point_array.c)

add_executable(reverse reverse.c)

add_executable(sentence_line sentence_line.c)

add_executable(star star.c)
