cmake_minimum_required(VERSION 3.15)
project(learn_c_the_hard_way C)

set(CMAKE_C_STANDARD 99)

add_executable(ex1 ex1.c)

add_executable(ex3 ex3.c)

add_executable(loop loop.c)

add_executable(ex7 ex7.c)

add_executable(buffer buffer.c)

add_executable(ex8 ex8.c)

add_executable(ex9 ex9.c)

add_executable(ex10 ex10.c)

add_executable(ex11 ex11.c)

add_executable(ex12 ex12.c)

add_executable(ex13 ex13.c)

add_executable(ex14 ex14.c)

add_executable(ex15 ex15.c)

add_executable(ex16 ex16.c)

add_executable(ex16-struct ex16-struct.c)

add_executable(ex17 ex17.c)

add_executable(ex18 ex18.c)

add_executable(strings strings.c)

add_executable(ex19 ex19.c)

add_executable(convert convert.c)

add_executable(ex22 ex22.c)

add_executable(ex22_main ex22_main.c)
