cmake_minimum_required(VERSION 3.0.0)
#project(the-c-programming-language-2 VERSION 0.1.0)
project(the-c-programming-language-2 C)

#include(CTest)
#enable_testing()


#set(CPACK_PROJECT_NAME ${PROJECT_NAME})
#set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
#include(CPack)

add_executable(char char.c)